# csr

./: .editorconfig  .flake8  .gitignore  README.md  Timings.ipynb  Timings.md  Timings.py  build_mkl.py  codecov.yml  conftest.py  env-dev-mkl.yml  env-dev-openblas.yml  envtool.py  jupytext.toml  min-constraints.txt  mkl-devel.yml  pyproject.toml  pytest.ini  setup.cfg  sonar-project.properties  tasks.py  tox.ini
.github/: release-drafter.yml
.github/workflows/: draft-release.yml  test.yml
build-tools/: flit-conda.py
csr/: __init__.py  _csr_ops.py  _csr_types.py  _rows.py  _struct.py  _util.py  _wiring.py  array.py  constructors.py  csr.py  kernel.py  layout.py  native.py  native_ops.py  structure.py  test_utils.py  transform.py
csr/kernels/: __init__.py  build_mkl.py  scipy.py
csr/kernels/mkl/: __init__.py  _api.py  convert.py  handle.py  mkl_ops.c  multiply.py
csr/kernels/numba/: __init__.py  multiply.py
docs/: conf.py  csr.rst  index.rst  kernels.rst  native.rst
envs/: py3.10-ci.yaml  py3.10-dev-mkl.yaml  py3.10-dev.yaml  py3.11-ci.yaml  py3.11-dev-mkl.yaml  py3.11-dev.yaml  py3.11-doc.yaml  py3.8-ci.yaml  py3.8-dev-mkl.yaml  py3.8-dev.yaml  py3.9-ci.yaml  py3.9-dev-mkl.yaml  py3.9-dev.yaml
tests/: test_active_kernel.py  test_attributes.py  test_bench_mult_vec.py  test_bench_multiply.py  test_convert.py  test_handles.py  test_initialize.py  test_kernel_numba.py  test_mkl.py  test_mult_vec.py  test_multiply.py  test_numba.py  test_numba_mult.py  test_pickle.py  test_transform.py  test_transpose.py
utils/: conda-tool.py
