[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "csr"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
]
description = "Compressed Sparse Row matrices for Python, with Numba API."
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ['version']
requires-python = ">= 3.7"
dependencies = [
    "numba >=0.53,<0.57",
    "numpy >=1.17",
    "scipy >=1.2,<2"
]

[[project.authors]]
name = "Michael Ekstrand"
email = "michaelekstrand@boisestate.edu"

[project.urls]
home-page = "https://csr.lenskit.org"
source = "https://github.com/lenskit/csr"

[project.optional-dependencies]
test = [
    "pytest >=6",
    "pytest-doctestplus >=0.9",
    "pytest-benchmark >=3",
    "pytest-cov >=2.12",
    "hypothesis ~=6.30",
    "psutil >=5"
]
dev = [
    "flit >=3.2,<4",
    "keyring",
    "flake8",
    "rstcheck",
    "invoke",
    "lenskit-build-helpers >=0.1",
    "sphinx-autobuild >=2021",
]
doc = [
    "sphinx >=4",
    "furo"
]
profile = [
    "notebook",
    "seaborn",
    "jupytext",
    "pandas >=1.0"
]
mkl = [
    "cffi"
]

[tool.flit.sdist]
include = ["tests/*"]
exclude = [
    ".github",
    "*.ipynb"
]

[tool.conda-lock]
channels = [
    "conda-forge",
    "lenskit",
]
