[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "csr"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
]
description = "Compressed Sparse Row matrices for Python, with Numba API."
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ['version']
requires-python = ">= 3.8"
dependencies = [
    "numba >=0.51,<0.59",
    "numpy >=1.21",
    "scipy >=1.4,<2"
]

[[project.authors]]
name = "Michael Ekstrand"
email = "michaelekstrand@boisestate.edu"

[project.urls]
home-page = "https://csr.lenskit.org"
source = "https://github.com/lenskit/csr"

[project.optional-dependencies]
test = [
    "lenskit-build-helpers >=0.3",  # p2c: -p
    "pytest ==7.*",
    "pytest-doctestplus >=0.9",
    "pytest-benchmark >=3",
    "pytest-cov >=2.12",
    "hypothesis >=6.30,<7",
    "psutil >=5"
]
dev = [
    "flit >=3.2,<4",
    "lenskit-build-helpers >=0.3",  # p2c: -p
    "keyring",
    "flake8",
    "rstcheck",
    "sphinx-autobuild >=2021",
]
doc = [
    "sphinx >=4",
    "furo"
]
profile = [
    "notebook",
    "seaborn",
    "jupytext",
    "pandas >=1.0,<2"
]
mkl = [
    "cffi"
]

[tool.flit.sdist]
include = ["tests/*"]
exclude = [
    ".github",
    "*.ipynb"
]

[tool.setuptools.packages.find]
include = ["csr/*"]

[tool.conda-lock]
channels = [
    "conda-forge",
    "lenskit",
]

[tool.pyproject2conda]
style = "yaml"
template_python = "envs/py{py_version}-{env}"
template = "environment.{env}"
channels = ["conda-forge"]
python = ["3.8", "3.9", "3.10", "3.11"]
default_envs = ["doc"]

[tool.pyproject2conda.envs.ci]
extras = ["dev", "test", "mkl"]
deps = [
    "mkl-devel",
    "mkl",
    "tbb",
    "libblas=*=*mkl",
    "c-compiler",
]

[tool.pyproject2conda.envs.dev]
extras = ["dev", "test", "doc"]

[tool.pyproject2conda.envs."dev-mkl"]
extras = ["dev", "test", "doc", "mkl"]
deps = [
    "mkl-devel",
    "mkl",
    "tbb",
    "libblas=*=*mkl",
    "c-compiler",
]

[[tool.pyproject2conda.overrides]]
envs = ["doc"]
python = ["3.11"]
