[metadata]
name = csr
url = https://csr.lenskit.org
project_urls =
    GitHub=https://github.com/lenskit/csr
author = Michael Ekstrand
author_email = michaelekstrand@boisestate.edu
version = attr: csr.__version__
description = Compressed sparse matrices using Numba
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
zip_safe = True
packages = find:
install_requires =
    numba >= 0.45, < 0.53
    numpy >= 1.16
    cffi >= 1.12.2
tests_require =
    pytest >= 3.9
    pytest-doctestplus
    hypothesis

[options.extras_require]
dev =
    flake8
    rstcheck
    twine
doc = sphinx
test =
    pytest
    pytest-cov
    hypothesis
